cilium/cilium-gatewayapi-example-bookinfo.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tls-gateway  
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-route53
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-1
    protocol: HTTPS
    port: 443
    hostname: "bookinfo-gw.viktoriouslab.nl"
    tls:
      certificateRefs:
      - kind: secret
        name: bookinfo-gw
        namespace: bookinfo
  - name: https-2
    protocol: HTTPS
    port: 443
    hostname: "shop-gw.viktoriouslab.nl"
    tls:
      certificateRefs:
      - kind: Secret
        name: shop-gw
        namespace: shop
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-1
  namespace: bookinfo
spec:
  parentRefs:
  - name: tls-gateway    
  hostnames:
  - "bookinfo-gw.viktoriouslab.nl"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /details
    backendRefs:
    - name: details
      port: 9080
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: productpage
      port: 9080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-2
  namespace: bookinfo
spec:
  parentRefs:
  - name: tls-gateway
  hostnames:
  - "shop-gw.viktoriouslab.nl"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      namespace: shop
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: productpage
  namespace: shop
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: bookinfo
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: secret-shop-gw
  namespace: shop
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: bookinfo
  to:
  - group: ""
    kind: Secret
