cilium/cilium-ingress-example-microservices.yaml
# Ingress object definition for Google microservices app
# https://github.com/GoogleCloudPlatform/microservices-demo
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cilium-ingress-microservices
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-route53
spec:
  ingressClassName: cilium
  rules:
    - host: shop.viktoriouslab.nl
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - shop.viktoriouslab.nl
    secretName: shop-cert
